--- a/app/scss/components/list-portfolio.scss
+++ b/app/scss/components/list-portfolio.scss
@@ -8,27 +8,11 @@
         flex-direction: column;
     }
 
-    @media (max-width: 768px) {
-        flex-direction: column;
-    }
-
-    @media (max-width: 480px) {
-        flex-direction: column;
-    }
-
     li {  
         width: 33.3%;
         height: 100%;
 
         @media (max-width: 979px) {
-            width: 100%;
-        }
-
-        @media (max-width: 768px) {
-            width: 100%;
-        }
-
-        @media (max-width: 480px) {
             width: 100%;
         }
     }
@@ -38,5 +22,9 @@
         width: 100%;
         height: 100%;
         display: block;
+    }
+
+    img {
+        object-fit: cover;
     }
 }
