--- a/app/scss/components/nav.scss
+++ b/app/scss/components/nav.scss
@@ -8,9 +8,9 @@
         bottom: 0;
         left: 0;
         z-index: 100;
-        background: #202529;
         display: flex;
         justify-content: center;
+        background: var(--color-black);
 
     }
     
