--- a/app/scss/components/portfolio.scss
+++ b/app/scss/components/portfolio.scss
@@ -1,6 +1,10 @@
 .portfolio {
+    @media print {
+        display: none;
+    }
+    
     .container {
-        max-width: 1200px;
+        max-width: none;
         height: 295px;
         padding-right: 0;
         padding-left: 0;
@@ -8,22 +12,15 @@
         @media (max-width: 979px) {
             height: auto;
         }
-
-        @media (max-width: 768px) {
-            height: auto;
-        }
-
-        @media (max-width: 480px) {
-            height: auto;
-        }
     }
 
+
     .link {
-        @media (max-width: 979px) {
+        @media (min-width: 768px) and (max-width: 979px) {
             height: 846px;
         }
 
-        @media (max-width: 768px) {
+        @media (min-width: 481px) and (max-width: 768px) {
             height: 664px;
         }
 
