--- a/app/scss/components/text-part.scss
+++ b/app/scss/components/text-part.scss
@@ -1,47 +1,84 @@
 .text-part {
-    padding-top: 55px;
-    padding-bottom: 175px;
-    background-color: var(--background-color-text-part);
-    font: var(--font-weight-text-part) var(--font-size-text-part) var(--font-sans-serif);
-    color: var(--color-text-part);
+    padding-top: 52px;
+    padding-bottom: 136px;
 
-    @media (max-width: 979px) {
+    @media (min-width: 768px) and (max-width: 979px) {
         padding-bottom: 100px;
     }
 
-    @media (max-width: 768px) {
+    @media (min-width: 481px) and (max-width: 768px) {
+        padding-top: 73px;
         padding-bottom: 104px;
     }
 
     @media (max-width: 480px) {
+        padding-top: 47px;
         padding-bottom: 50px;
     }
 
-    h3 {
-        font: var(--font-weight-text-h3) var(--font-size-text-h3) var(--font-sans-serif);
+    @media print {
+        padding-top: 35px;
+    }
+
+    h1, .h1,
+    h2, .h2,
+    h3, .h3,
+    h4, .h4,
+    h5, .h5,
+    h6, .h6,
+    .h  {
+        margin-bottom: 24px;
         color: var(--color-text-part-h3);
-        margin-bottom: 32px;
-    }
-
-    p {
-        margin-bottom: 46px;
-    }
-
-    .container {
-
-        @media (max-width: 979px) {
-            padding-left: 74px;
-            padding-right: 74px;
-        }
-
-        @media (max-width: 768px) {
-            padding-left: 74px;
-            padding-right: 74px;
+        
+        @media (min-width: 481px) and (max-width: 768px) {
+            margin-bottom: 40px;
+            font-size: 36.5px;
         }
 
         @media (max-width: 480px) {
-            padding-left: 39px;
-            padding-right: 39px;
+            margin-bottom: 25px;
+            letter-spacing: -0.5px;
+        }
+    }
+
+    p {
+        max-width: 400px;
+        margin-bottom: 32px;
+        margin-left: 3px;
+        color: var(--color-text-part);
+
+        @media (min-width: 481px) and (max-width: 768px) {
+            max-width: none;
+            margin-bottom: 64px;
+            letter-spacing: 1px;
+        }
+
+        @media (max-width: 480px) {
+            max-width: 400px;
+            margin-bottom: 47px;
+            margin-left: 3px;
+        }
+
+        @media print {
+            margin-bottom: 80px;
+        }
+    }
+
+    .container {
+        padding-left: 64px;
+
+        @media (min-width: 481px) and (max-width: 979px) {
+            padding-left: 85px;
+            padding-right: 35px;
+        }
+
+        @media (max-width: 480px) {
+            padding-left: 53px;
+            padding-right: 48px;
+        }
+
+        @media print {
+            padding-left: 35px;
         }
     }
 }
